--- a/app/src/main/res/layout/destination_item.xml
+++ b/app/src/main/res/layout/destination_item.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    >
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,15 +19,14 @@
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             tools:src="@tools:sample/avatars"
-            android:contentDescription="@string/story_photo" />
+            android:contentDescription="@string/destination_photo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
-            android:background="?attr/background"
-            >
+            android:background="#10000000">
 
             <TextView
                 android:id="@+id/tv_item_name"
@@ -38,7 +35,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="?attr/colorSecondary"
-                tools:text="@string/story_name" />
+                android:text="@string/destination_name" />
 
             <TextView
                 android:id="@+id/tv_item_description"
@@ -47,8 +44,9 @@
                 android:layout_marginTop="8dp"
                 android:textColor="?attr/colorSecondary"
                 android:textSize="16sp"
-                android:maxLines="5"
+                android:maxLines="2"
                 android:text="@string/description" />
+
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
