--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.details.DetailsFragment">
 
     <TextView
+        android:id="@+id/text_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
