--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:isScrollContainer="true"
     android:background="?attr/background"
     tools:context=".ui.home.HomeFragment">
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/horizontalLayout">
+
+        <LinearLayout
+            android:id="@+id/categoryLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:background="#00FFFFFF">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCategory1"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColorHighlight="@color/white"
+                android:text="All"
+                android:background="@drawable/rounded_button"
+                android:textColor="?android:attr/textColorSecondary" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCategory2"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Beach"
+                android:background="@drawable/rounded_button"
+                android:textColor="?android:attr/textColorSecondary" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCategory3"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Temple"
+                android:background="@drawable/rounded_button"
+                android:textColor="?android:attr/textColorSecondary" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCategory4"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Museum"
+                android:background="@drawable/rounded_button"
+                android:textColor="?android:attr/textColorSecondary" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
 
     <ProgressBar
         android:id="@+id/loadingBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:visibility="visible"
         tools:visibility="visible" />
 
@@ -21,16 +77,14 @@
         android:id="@+id/rvDestination"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
+        android:layout_below="@id/horizontalLayout"
+        android:layout_marginTop="0dp"
+        android:layout_margin="8dp"
         android:overScrollMode="never"
         android:scrollbarSize="0dp"
         tools:listitem="@layout/destination_item" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:id="@+id/texts"
-        android:layout_height="wrap_content"
-        android:text="dajdaksjdannacjacd"
-        android:textSize="40sp" />
+</RelativeLayout>
 
-</FrameLayout>
+
+
