--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,90 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:isScrollContainer="true"
-    android:background="?attr/background"
-    tools:context=".ui.home.HomeFragment">
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/horizontalLayout">
-
-        <LinearLayout
-            android:id="@+id/categoryLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:background="#00FFFFFF">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCategory1"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColorHighlight="@color/white"
-                android:text="All"
-                android:background="@drawable/rounded_button"
-                android:textColor="?android:attr/textColorSecondary" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCategory2"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Beach"
-                android:background="@drawable/rounded_button"
-                android:textColor="?android:attr/textColorSecondary" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCategory3"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Temple"
-                android:background="@drawable/rounded_button"
-                android:textColor="?android:attr/textColorSecondary" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCategory4"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Museum"
-                android:background="@drawable/rounded_button"
-                android:textColor="?android:attr/textColorSecondary" />
-        </LinearLayout>
-    </HorizontalScrollView>
-
+    android:background="?attr/background">
 
     <ProgressBar
         android:id="@+id/loadingBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDestination"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/horizontalLayout"
-        android:layout_marginTop="0dp"
-        android:layout_margin="8dp"
-        android:overScrollMode="never"
         android:scrollbarSize="0dp"
-        tools:listitem="@layout/destination_item" />
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="67dp"
+                >
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:theme="@style/Widget.AppCompat.Toolbar"
+                    app:layout_collapseMode="pin">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginEnd="30dp"
+                            android:src="@drawable/ic_fav_border" />
+
+                    </RelativeLayout>
+
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.AppBarLayout>
+            <Spinner
+                android:id="@+id/categories_spinner"
+                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginStart="20dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="30dp"
+                android:entries="@array/categories" />
 
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvDestination"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:layout_marginTop="0dp"
+                android:layout_marginHorizontal="20dp"
+                android:overScrollMode="never"
+                android:scrollbarSize="0dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:listitem="@layout/destination_item" />
 
+        </LinearLayout>
+    </ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
