--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,35 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-<!--        <com.google.android.material.appbar.AppBarLayout-->
-<!--            android:id="@+id/appbar"-->
-<!--            android:fitsSystemWindows="true"-->
-<!--            android:layout_height="192dp"-->
-<!--            android:layout_width="match_parent">-->
-
-<!--            <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:toolbarId="@+id/toolbar"-->
-<!--                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"-->
-<!--                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"-->
-<!--                app:contentScrim="?attr/colorPrimary">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/app_bar_image"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:src="@drawable/ic_launcher_background"-->
-<!--                    android:scaleType="centerCrop" />-->
-
-<!--                <androidx.appcompat.widget.Toolbar-->
-<!--                    android:id="@+id/toolbar"-->
-<!--                    android:layout_height="?attr/actionBarSize"-->
-<!--                    android:layout_width="match_parent">-->
-<!--                </androidx.appcompat.widget.Toolbar>-->
-<!--            </com.google.android.material.appbar.CollapsingToolbarLayout>-->
-<!--        </com.google.android.material.appbar.AppBarLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,35 +19,54 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/hero"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/ic_profile"
                 android:layout_marginTop="30dp"
-                tools:src="@tools:sample/avatars" />
+               />
 
             <TextView
                 android:id="@+id/name_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="GUEST"
+                android:textStyle="bold"
                 android:textSize="20sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/favorite_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/favorites"
-            android:layout_margin="20dp" />
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/favorite_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/favorites"
+                android:layout_margin="20dp" />
+
+            <Spinner
+                android:id="@+id/categories_spinner"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/categories"
+                android:textAlignment="center" />
+        </LinearLayout>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDestination"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="800dp"
             android:layout_margin="8dp"
             android:overScrollMode="never"
             android:scrollbarSize="0dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/destination_item" />
 
     </LinearLayout>
