--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/background"
-    tools:context=".ui.home.MainActivity">
+    android:scrollbarSize="0dp"
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progressIndicator"
             android:layout_width="match_parent"
@@ -22,60 +25,48 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <ImageView
             android:id="@+id/previewImageView"
             android:layout_width="400dp"
-            android:layout_height="200dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/cameraButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_place_holder"
-             />
+            android:layout_height="400dp"
+            app:srcCompat="@drawable/ic_place_holder" />
 
-        <Button
-            android:id="@+id/cameraButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
-            android:paddingHorizontal="50dp"
-            android:text="@string/camera"
-            android:backgroundTint="?attr/colorPrimary"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
-            app:layout_constraintStart_toStartOf="@+id/previewImageView"
-            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-        <Button
-            android:id="@+id/galleryButton"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:elevation="2dp"
-            android:paddingHorizontal="50dp"
-            android:scaleType="fitCenter"
-            android:text="@string/gallery"
-            android:backgroundTint="?attr/colorPrimary"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="@+id/previewImageView"
-            app:layout_constraintHorizontal_bias="0.642"
-            app:layout_constraintStart_toEndOf="@+id/cameraButton"
-            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
+            <Button
+                android:id="@+id/cameraButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="50dp"
+                android:layout_marginHorizontal="10dp"
+                android:text="@string/camera"
+                android:backgroundTint="?attr/colorPrimary"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/galleryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:paddingHorizontal="50dp"
+                android:text="@string/gallery"
+                android:backgroundTint="?attr/colorPrimary"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
 
         <Button
             android:id="@+id/uploadButton"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
             android:backgroundTint="?attr/colorPrimary"
             android:text="@string/upload"
             android:textColor="@color/white"
@@ -88,23 +79,25 @@
             android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/upload"
+            android:layout_margin="12dp"
+            android:text="@string/result"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.044"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/uploadButton"
             tools:ignore="MissingConstraints" />
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDestination"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="800dp"
             android:layout_below="@id/result"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="0dp"
-            android:layout_margin="8dp"
             android:overScrollMode="never"
             android:scrollbarSize="0dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/destination_item" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 </ScrollView>
