--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,13 +8,9 @@
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_camera"
         android:title="@string/title_search" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_setting"
-        android:title="@string/title_notifications" />
+    
 
     <item
         android:id="@+id/navigation_profile"
