--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,28 +8,48 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="bangkit.capstone.vloc.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_navigation_home_to_navigation_details2"
-            app:destination="@id/navigation_details" />
+            app:destination="@id/navigation_details"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_out"/>
     </fragment>
 
     <fragment
         android:id="@+id/navigation_search"
         android:name="bangkit.capstone.vloc.ui.search.SearchFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_details2"
+            app:destination="@id/navigation_details"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_out"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_details"
         android:name="bangkit.capstone.vloc.ui.details.DetailsFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_details"
         tools:layout="@layout/fragment_details" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="bangkit.capstone.vloc.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile"/>
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_details2"
+            app:destination="@id/navigation_details"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_out"/>
+    </fragment>
 </navigation>
