--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,59 +23,71 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:scrollbarSize="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="1000dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-            <com.google.android.material.appbar.AppBarLayout
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:navigationIcon="@drawable/ic_light"
-                    app:title="@string/app_name"
-                    app:titleMarginTop="15dp"
-                    android:theme="@style/Widget.AppCompat.Toolbar">
-
-                </androidx.appcompat.widget.Toolbar>
-            </com.google.android.material.appbar.AppBarLayout>
-
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:minHeight="?attr/actionBarSize"
+                app:title="@string/app_name"
+                app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="300dp"
-                android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Our Recommendation"
+                    android:layout_marginVertical="10dp"
+                    android:padding="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"/>
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvDestination2"
+                    android:id="@+id/rvBanner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
                     android:overScrollMode="never"
                     android:scrollbarSize="0dp"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:listitem="@layout/destination_item" />
+                     />
             </LinearLayout>
 
-            <Spinner
-                android:id="@+id/categories_spinner"
-                android:layout_width="wrap_content"
-                android:textAlignment="center"
-                android:layout_marginStart="20dp"
-                android:layout_height="48dp"
-                android:layout_marginVertical="10dp"
-                android:layout_marginEnd="30dp"
-                android:entries="@array/categories" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/find_your_destination_here"
+                    android:textSize="16sp"/>
+                <Spinner
+                    android:id="@+id/categories_spinner"
+                    android:layout_width="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="48dp"
+                    android:entries="@array/categories" />
 
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvDestination"
                 android:layout_width="match_parent"
-                android:layout_height="800dp"
+                android:layout_height="1000dp"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="0dp"
                 android:overScrollMode="never"
