--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,6 +30,7 @@
             android:id="@+id/previewImageView"
             android:layout_width="400dp"
             android:layout_height="400dp"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_place_holder" />
 
         <LinearLayout
@@ -38,60 +39,57 @@
             android:orientation="horizontal"
             android:gravity="center">
 
-            <Button
-                android:id="@+id/cameraButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="50dp"
-                android:layout_marginHorizontal="10dp"
-                android:text="@string/camera"
-                android:backgroundTint="?attr/colorPrimary"
-                android:textColor="@color/white" />
-
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/galleryButton"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
                 android:layout_marginHorizontal="10dp"
-                android:paddingHorizontal="50dp"
-                android:text="@string/gallery"
-                android:backgroundTint="?attr/colorPrimary"
-                android:textColor="@color/white" />
+                app:icon="@drawable/ic_add_gallery"
+                app:iconGravity="textStart"
+                app:cornerRadius="10dp"
+                app:strokeColor="?attr/colorPrimary"
+                app:strokeWidth="2dp"
+                app:iconSize="30dp"
+                android:text="@string/gallery" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cameraButton"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                app:icon="@drawable/ic_add_camera"
+                app:iconGravity="textStart"
+                app:cornerRadius="10dp"
+                app:strokeColor="?attr/colorPrimary"
+                app:strokeWidth="2dp"
+                app:iconSize="30dp"
+                android:text="@string/camera" />
 
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/uploadButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="24dp"
-            android:backgroundTint="?attr/colorPrimary"
-            android:text="@string/upload"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/galleryButton" />
-
         <TextView
             android:id="@+id/result"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_marginVertical="30dp"
+            android:layout_marginHorizontal="12dp"
             android:text="@string/result"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/uploadButton"
-            tools:ignore="MissingConstraints" />
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDestination"
             android:layout_width="match_parent"
             android:layout_height="800dp"
-            android:layout_below="@id/result"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="0dp"
             android:overScrollMode="never"
