--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,4 +6,14 @@
         <item>@string/beach</item>
         <item>@string/temple</item>
     </string-array>
+    <string-array name="dark_mode">
+        <item>@string/dark_mode_auto</item>
+        <item>@string/dark_mode_on</item>
+        <item>@string/dark_mode_off</item>
+    </string-array>
+    <string-array name="dark_mode_value">
+        <item>@string/pref_dark_follow_system</item>
+        <item>@string/pref_dark_on</item>
+        <item>@string/pref_dark_off</item>
+    </string-array>
 </resources>
