--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -151,7 +151,6 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:enabled="false"
-        android:alpha="0"
         android:backgroundTint="?attr/colorPrimary"
         android:textColor="@color/white"
         android:text="@string/signup"
@@ -178,13 +177,14 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="400dp"
-        android:layout_height="276dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="426dp"
+        android:layout_height="283dp"
+        android:layout_marginTop="-10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/beach0"
-        tools:layout_editor_absoluteX="-4dp" />
+        tools:layout_editor_absoluteX="-17dp" />
 
     <TextView
         android:id="@+id/login_tv"
