--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,7 +6,7 @@
     tools:context=".ui.home.MainActivity"
     android:background="?attr/background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:scrollbarSize="0dp"
     >
 
@@ -14,6 +14,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/ivdetail">
+            <TextView
+                android:id="@+id/tvname"
+                android:layout_weight="200"
+                android:layout_width="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textColor="?attr/colorSecondary"
+                android:textSize="36sp"
+                android:textStyle="bold"
+                android:transitionName="name" />
+
+
+            <ImageButton
+                android:id="@+id/btn_fav"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="16dp"
+                android:background="@null"
+                android:contentDescription="@string/favorites"
+                app:srcCompat="@drawable/ic_fav_border" />
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/ivdetail"
@@ -27,20 +59,6 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/tvname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="24dp"
-            android:textColor="?attr/colorSecondary"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:transitionName="name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivdetail" />
 
         <TextView
             android:id="@+id/tvdetail"
@@ -50,44 +68,25 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="20dp"
             android:textColor="?attr/colorSecondary"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:lineHeight="28sp"
             android:transitionName="description"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvname" />
-
-        <TextView
-            android:id="@+id/login_in_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_first"
-            android:textSize="16sp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.456" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSimilar"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_maps" />
+
+
 
         <TextView
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/rating"
-            app:layout_constraintEnd_toEndOf="@+id/tvdetail"
-            app:layout_constraintStart_toStartOf="@+id/tvdetail"
-            app:layout_constraintTop_toBottomOf="@+id/tvdetail" />
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <TextView
             android:id="@+id/rating_score"
@@ -105,10 +104,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
             android:text="@string/open_time"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/tvdetail" />
+            app:layout_constraintTop_toTopOf="@+id/rating" />
 
         <TextView
             android:id="@+id/tv_time"
@@ -128,29 +126,14 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="688dp" />
 
-        <ImageButton
-            android:id="@+id/btn_share"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            android:background="@null"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.987"
-            app:layout_constraintStart_toEndOf="@+id/tvname"
-            app:layout_constraintTop_toBottomOf="@+id/ivdetail"
-            app:srcCompat="@drawable/ic_share"
-            android:contentDescription="@string/favorites" />
-
         <TextView
             android:id="@+id/htm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="@string/htm"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
-            app:layout_constraintTop_toBottomOf="@+id/tvdetail" />
+            app:layout_constraintTop_toTopOf="@+id/rating" />
 
         <TextView
             android:id="@+id/htm_nominal"
@@ -173,9 +156,11 @@
             app:iconGravity="textEnd"
             android:textAllCaps="false"
             app:cornerRadius="50dp"
-            app:strokeColor="?attr/colorPrimary"
+            app:strokeColor="?attr/colorSecondary"
             app:strokeWidth="2dp"
             app:iconSize="30dp"
+            app:iconTint="?attr/colorSecondary"
+            android:textColor="?attr/colorSecondary"
             android:text="@string/open_maps"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -207,18 +192,38 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fav_fab"
+        <ImageView
+            android:id="@+id/img1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:foregroundGravity="bottom"
-            app:fabSize="auto"
-            android:backgroundTint="?attr/colorPrimary"
-            app:layout_anchorGravity="bottom|end"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_fav_border"
-            android:contentDescription="@string/favorites" />
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="@+id/img2"
+            app:layout_constraintStart_toStartOf="@+id/img2"
+            app:layout_constraintTop_toBottomOf="@+id/img2"
+            tools:src="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/img2"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="@+id/img3"
+            app:layout_constraintStart_toStartOf="@+id/img3"
+            app:layout_constraintTop_toBottomOf="@+id/img3"
+            tools:src="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/img3"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="@+id/tvdetail"
+            app:layout_constraintStart_toStartOf="@+id/tvdetail"
+            app:layout_constraintTop_toBottomOf="@+id/tvdetail"
+            tools:src="@tools:sample/avatars" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
