--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,29 @@
                 android:background="?attr/colorPrimary"
                 android:minHeight="?attr/actionBarSize"
                 app:title="@string/app_name"
-                app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>
+                app:titleTextColor="@android:color/white">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:backgroundTint="@null"
+                    android:layout_gravity="end"
+                    android:padding="10dp"
+                    android:id="@+id/login_btn"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_login"
+                    android:contentDescription="@string/login" />
+
+            </androidx.appcompat.widget.Toolbar>
+
+            <TextView
+                android:id="@+id/greetings"
+                android:layout_margin="20dp"
+                android:textSize="24sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hi_user" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,7 +71,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Our Recommendation"
+                    android:text="@string/our_recommendation"
                     android:layout_marginVertical="10dp"
                     android:padding="10dp"
                     android:textAlignment="center"
