--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,18 +25,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <ImageView
-            android:id="@+id/previewImageView"
-            android:layout_width="400dp"
+            android:id="@+id/previewImage"
+            android:layout_width="match_parent"
             android:layout_height="400dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_place_holder" />
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/ic_place_holder"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginVertical="10dp"
             android:gravity="center">
 
             <com.google.android.material.button.MaterialButton
@@ -74,28 +76,77 @@
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/result"
+
+        <LinearLayout
+            android:id="@+id/predict_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="30dp"
-            android:layout_marginHorizontal="12dp"
-            android:text="@string/result"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:paddingBottom="100dp"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:layout_margin="20dp">
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvDestination"
-            android:layout_width="match_parent"
-            android:layout_height="800dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="0dp"
-            android:overScrollMode="never"
-            android:scrollbarSize="0dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:listitem="@layout/destination_item" />
+            <TextView
+                android:id="@+id/result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="12dp"
+                android:text="@string/result"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/image_result"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:scaleType="centerCrop"
+                android:layout_marginBottom="16dp"
+                app:srcCompat="@drawable/ic_place_holder"/>
+
+            <TextView
+                android:id="@+id/name_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:textSize="24sp"/>
+            <TextView
+                android:id="@+id/predict_result_accuration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:layout_marginBottom="10dp"
+                android:textSize="24sp"/>
+            <TextView
+                android:id="@+id/address_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:textSize="24sp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/direct_button"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:layout_marginTop="10dp"
+                app:icon="@drawable/ic_go"
+                android:layout_gravity="center"
+                app:iconGravity="textEnd"
+                app:cornerRadius="10dp"
+                app:strokeColor="?attr/colorPrimary"
+                app:strokeWidth="2dp"
+                app:iconSize="30dp"
+                android:text="@string/title_details" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
